[ALLI-2056] National: repaired carousel on small screens.

--- a/web/interface/themes/national/css/home_custom.css
+++ b/web/interface/themes/national/css/home_custom.css
@@ -214,7 +214,8 @@
 }
 @media only screen and (max-width: 730px) {
     #content-carousel {
-        display:none;
+        height: 0px;
+        overflow: hidden;
     }
 }
 
